--- a/диплом вечер.md
+++ b/диплом вечер.md
@@ -206,24 +206,34 @@ envdir /etc/wal-g.d/env wal-g backup-fetch /data/patroni LATEST
 ============================================================================================
 ============================================================================================
 #создаем окружения для  скрипта backup
+--------------------------
 rm -rf /data/spilo_backup-script_suka.yaml
 vim /data/spilo_backup-script_suka.yaml
 cat /data/spilo_backup-script_suka.yaml
+--------------------------
 
 #применяю
+--------------------------
 kubectl apply -f /data/spilo_backup-script_suka.yaml
 kubectl apply -f /data/spilo_backup-script_suka.yaml
+--------------------------
 
 #проверяем
+--------------------------
 kubectl get ConfigMap
 kubectl get ConfigMap
-kubectl get ConfigMap
+--------------------------
 
 #если надо удалить
+--------------------------
 kubectl delete configmap backup-script
 kubectl delete configmap backup-script
+--------------------------
 
----
+--------------------------
+--------------------------
+--------------------------
+--------------------------
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -245,7 +255,10 @@ data:
   CLONE_USE_WALG_RESTORE: "true"
   WALG_DISABLE_S3_SSE: "true"
   WALE_ENV_DIR: "/config
-
+--------------------------
+--------------------------
+--------------------------
+--------------------------
 
 
 ============================================================================================
@@ -257,16 +270,28 @@ data:
 ============================================================================================
 ============================================================================================
 
-#создаем окружения для  основной конфигурации 
+#создаем окружения для  основной конфигурации
+-------------------------- 
 rm -rf /data/spilo_kubernetes_final_suka.yaml
 vim /data/spilo_kubernetes_final_suka.yaml
 cat /data/spilo_kubernetes_final_suka.yaml
+--------------------------
 
 #применяю
+--------------------------
 kubectl apply -f /data/spilo_kubernetes_final_suka.yaml --namespace spilo
 kubectl apply -f /data/spilo_kubernetes_final_suka.yaml --namespace spilo
+--------------------------
+
+#проверяю
+--------------------------
+kubectl get pods --namespace spilo
+kubectl get pods --namespace spilo
+--------------------------
 
 
+#если надо удалить
+--------------------------
 kubectl delete -f /data/spilo_kubernetes_final_suka.yaml  --namespace spilo
 kubectl delete -f /data/spilo_kubernetes_final_suka.yaml  --namespace spilo
 
@@ -277,13 +302,13 @@ kubectl delete all,ing,secrets,pvc,pv --all --namespace spilo
 rm -rf /data/local-path-provisioner/*
 rm -rf /data/local-path-provisioner/*
 rm -rf /data/local-path-provisioner/*
+--------------------------
 
 
-kubectl get pods --namespace spilo
-kubectl get pods --namespace spilo
-kubectl get pods --namespace spilo
-
-
+--------------------------
+--------------------------
+--------------------------
+--------------------------
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -675,7 +700,10 @@ data:
   CLONE_USE_WALG_RESTORE: "true"
   WALG_DISABLE_S3_SSE: "true"
   WALE_ENV_DIR: "/config"
-
+--------------------------
+--------------------------
+--------------------------
+--------------------------
 
 
 
