--- a/диплом вечер.md
+++ b/диплом вечер.md
@@ -5,35 +5,108 @@
 0--------------------------------------------------------------------------------------------------------
 
 0--------------------------------------------------------------------------------------------------------
-#для тестов из вне:
 
+------------------------------------------------------------------------------------------------------
+-------------------------------------для тестов из вне------------------------------------------------
+------------------------------------------------------------------------------------------------------
+
+#проверяю что все ок и что все запустилось все под создались и работают
 kubectl get pods --namespace spilo
 kubectl get pods --namespace spilo
-kubectl get pods --namespace spilo
 
+#проверяю что создались сервисы
+kubectl get services --namespace spilo
+kubectl get services --namespace spilo
 
+#проверяю что все ок и что все запустилось с дисками pvc
+kubectl get pvc --namespace spilo
+kubectl get pvc --namespace spilo
+
+#проверяю что все ок на всех обектах кластера
+kubectl get all -A
+kubectl get all -A
+
+#подключиться к поду внутрь контенера с patroni
 kubectl -n spilo exec -it pod/zalandopatroni777-0  -- bash
 kubectl -n spilo exec -it pod/zalandopatroni777-0  -- bash
-kubectl -n spilo exec -it pod/zalandopatroni777-0  -- bash
+
+#смотрим на кворум кто мастер 
+kubectl -n spilo exec -it pod/zalandopatroni777-0  -- patronictl list
+kubectl -n spilo exec -it pod/zalandopatroni777-0  -- patronictl list
+
+#единоразово смотрим логи pod видм кто у нас матер
+kubectl logs --namespace spilo pod/zalandopatroni777-0
+kubectl logs --namespace spilo pod/zalandopatroni777-1
+
+#смотреть логи в режиме реального времени pod pod/zalandopatroni01-0 namespace spilo используя префикс -f
+kubectl logs --namespace spilo pod/zalandopatroni777-0 -f
+kubectl logs --namespace spilo pod/zalandopatroni777-0 -f
+
+#Наборы скриптов для patroni находятся тут
+kubectl -n spilo exec -it pod/zalandopatroni777-0 -- ls /scripts/
+kubectl -n spilo exec -it pod/zalandopatroni777-0 -- ls /scripts/
+
+kubectl -n spilo exec -it pod/zalandopatroni777-0 -- cat /scripts/basebackup.sh
+kubectl -n spilo exec -it pod/zalandopatroni777-0 -- cat /scripts/basebackup.sh
+
+#запустить скрипт бекапа
+kubectl -n spilo exec -it pod/zalandopatroni777-0 -- bash /scripts/basebackup.sh
+kubectl -n spilo exec -it pod/zalandopatroni777-0 -- bash /scripts/basebackup.sh
+
+#если требуется restart конфигурацию кластера 
+kubectl -n spilo exec -it pod/zalandopatroni777-0  -- patronictl restart zalandopatroni777
+kubectl -n spilo exec -it pod/zalandopatroni777-0  -- patronictl restart zalandopatroni777
+
+#если требуется reload конфигурацию кластера 
+kubectl -n spilo exec -it pod/zalandopatroni777-0  -- patronictl reload zalandopatroni777
+kubectl -n spilo exec -it pod/zalandopatroni777-0  -- patronictl reload zalandopatroni777
+
+#выполняю switchover
+kubectl -n spilo exec -it pod/zalandopatroni777-1  -- patronictl switchover
+kubectl -n spilo exec -it pod/zalandopatroni777-1  -- patronictl switchover
 
 
+------------------------------------------------------------------------------------------------------
+-------------------------------------для тестов внутри контенера--------------------------------------
+------------------------------------------------------------------------------------------------------
+# для patroni
+sv stop cron
+sv restart patroni
 
-#для внутрянки:
+#показать лидера и кворум 
 patronictl -c postgres.yml list
 patronictl -c postgres.yml list
-patronictl -c postgres.yml list
 
-
+#команда на изменение config
 patronictl -c postgres.yml edit-config
 patronictl -c postgres.yml edit-config
-patronictl -c postgres.yml edit-config
 
+#если требуется restart
+patronictl -c postgres.yml restart zalandopatroni777
+patronictl -c postgres.yml restart zalandopatroni777
 
+#если требуется reload
+patronictl -c postgres.yml reload zalandopatroni777
+patronictl -c postgres.yml reload zalandopatroni777
+
+#преключить wal
 select pg_switch_wal();
 select pg_switch_wal();
-select pg_switch_wal();
 
+#БАЗОВАЯ ИНФОРМАЦИЯ порт версия сервер
+select
+inet_server_addr( ) AS "Server",
+inet_server_port( ) AS "Port",
+current_database() AS "CurrentDatabase",
+version() AS "Version";
 
+#показать ноды реплики
+select usename,application_name,client_addr,backend_start,state,sync_state from pg_stat_replication;
+select usename,application_name,client_addr,backend_start,state,sync_state from pg_stat_replication;
+
+#показать состояние конкретной ноды к которой подключился не находится ли она в состоянии восстоновления
+select pg_is_in_recovery();
+select pg_is_in_recovery();
 
 ============================================================================================
 ============================================================================================
@@ -195,6 +268,41 @@ envdir /etc/wal-g.d/env wal-g backup-fetch /data/patroni LATEST
 ----------------------------------------------------------------------------------------------------------
 
 
+
+
+
+----------------------------------------------------------------------------------------------------------
+#ЧЕРНОВИК
+https://github.com/zalando/postgres-operator/blob/master/docs/administrator.md
+https://github.com/zalando/patroni/issues/1571
+https://blog.csdn.net/chenhongloves/article/details/123236332
+https://blog.csdn.net/chenhongloves/article/details/123236332
+https://blog.csdn.net/chenhongloves/article/details/123236332
+
+В зависимости от поставщика облачного хранилища для Spilo должны быть установлены разные переменные среды . 
+Не все они генерируются автоматически оператором путем изменения его конфигурации. 
+В этом случае вы должны использовать дополнительную карту конфигурации или секрет .
+
+#выполним backup
+envdir /config /scripts/postgres_backup.sh /home/postgres/pgdata/pgroot/data
+envdir /config /scripts/postgres_backup.sh /home/postgres/pgdata/pgroot/data
+envdir /config /scripts/postgres_backup.sh /home/postgres/pgdata/pgroot/data
+
+В Postgres вы можете проверить предварительно настроенные команды для архивации и восстановления файлов WAL. 
+Вы можете найти файлы журналов для соответствующих команд в разделе $HOME/pgdata/pgroot/pg_log/postgres-?.log.
+
+archive_mode: 'on'
+archive_command:  `envdir "{WALE_ENV_DIR}" {WALE_BINARY} wal-push "%p"`
+restore_command:  `envdir "{{WALE_ENV_DIR}}" /scripts/restore_command.sh "%f" "%p"`
+
+
+Вы можете создать базовую резервную копию вручную с помощью следующей команды и проверить, попадает ли она в указанный вами путь резервного копирования WAL:
+envdir "/run/etc/wal-e.d/env" /scripts/postgres_backup.sh "/home/postgres/pgdata/pgroot/data"
+
+Вы также можете проверить, может ли Spilo найти какие-либо резервные копии:
+envdir "/run/etc/wal-e.d/env" wal-g backup-list
+----------------------------------------------------------------------------------------------------------
+
 ============================================================================================
 ============================================================================================
 ============================================================================================
@@ -269,12 +377,20 @@ data:
 ============================================================================================
 ============================================================================================
 ============================================================================================
+#начинаем создание нашего кластера
 
 #создаем окружения для  основной конфигурации
 -------------------------- 
 rm -rf /data/spilo_kubernetes_final_suka.yaml
 vim /data/spilo_kubernetes_final_suka.yaml
 cat /data/spilo_kubernetes_final_suka.yaml
+--------------------------
+
+
+#создаем namespase spilo
+--------------------------
+kubectl create ns spilo
+kubectl create ns spilo
 --------------------------
 
 #применяю
@@ -285,23 +401,38 @@ kubectl apply -f /data/spilo_kubernetes_final_suka.yaml --namespace spilo
 
 #проверяю
 --------------------------
+# pods
 kubectl get pods --namespace spilo
 kubectl get pods --namespace spilo
+
+# pwc
+kubectl get pvc --namespace spilo
+kubectl get pvc --namespace spilo
+
+# Это предоставит информацию о пространствах имен
+kubectl get namespace
+kubectl get namespace
 --------------------------
 
 
 #если надо удалить
 --------------------------
+#если надо удалить манифест
 kubectl delete -f /data/spilo_kubernetes_final_suka.yaml  --namespace spilo
 kubectl delete -f /data/spilo_kubernetes_final_suka.yaml  --namespace spilo
 
+#если надо удалить  all,ing,secrets,pvc,pv
 kubectl delete all,ing,secrets,pvc,pv --all --namespace spilo
 kubectl delete all,ing,secrets,pvc,pv --all --namespace spilo
 
-после удаляю руками persistentvolume которые не удалились автоматом  из директории  
+#после удаляю руками persistentvolume которые не удалились автоматом  из директории  
 rm -rf /data/local-path-provisioner/*
 rm -rf /data/local-path-provisioner/*
 rm -rf /data/local-path-provisioner/*
+
+# дополнительно если надо удалить  namespace spilo
+kubectl delete namespace spilo
+kubectl delete namespace spilo
 --------------------------
 
 
